--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
+	<head>
+		<meta charset="utf-8" />
+		<title>Our Mall for Developers</title>
+		<base href="/" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="theme-color" content="#0086e6" />
+		<link rel="manifest" href="manifest.webmanifest" />
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+		<link
+			rel="stylesheet"
+			href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+		/>
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<title>Our Mall for Developers</title>
-	<base href="/" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="theme-color" content="#0086e6" />
-	<link rel="manifest" href="manifest.webmanifest" />
-	<link rel="icon" type="image/x-icon" href="favicon.ico" />
-	<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
-</head>
-
-<body>
-	<app-root></app-root>
-	<noscript class="no__script">
-		<div class="no__script__container">
-			<img class="content__image" src="assets/images/disconnected.png" alt="Demonstrative disabled javascript picture">
-			<div class="content">
-				<h1 class="title">Con&eacute;ctate con nosotros</h1>
-				<p class="description">
-					Para que nuestra aplicaci&oacute;n funcione correctamente y podamos brindarte la mejor experiencia, es
-					necesario que habilites la ejecuci&oacute;n de Javascript en tu navegador.
-				</p>
+	<body>
+		<app-root></app-root>
+		<noscript class="no__script">
+			<div class="no__script__container">
+				<img
+					class="content__image"
+					src="assets/images/disconnected.png"
+					alt="Demonstrative disabled javascript picture"
+				/>
+				<div class="content">
+					<h1 class="title">Con&eacute;ctate con nosotros</h1>
+					<p class="description">
+						Para que nuestra aplicaci&oacute;n funcione correctamente y
+						podamos brindarte la mejor experiencia, es necesario que habilites
+						la ejecuci&oacute;n de Javascript en tu navegador.
+					</p>
+				</div>
 			</div>
-		</div>
-	</noscript>
-</body>
-
+		</noscript>
+	</body>
 </html>
